--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "@tailwindcss/vite": "^4.1.5",
+    "@use-gesture/react": "^10.3.1",
     "framer-motion": "^12.10.2",
     "lucide-react": "^0.507.0",
     "react": "^19.1.0",
