--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@react-spring/web": "^9.7.5",
     "@tailwindcss/vite": "^4.1.5",
     "@use-gesture/react": "^10.3.1",
+    "axios": "^1.9.0",
+    "cloudinary": "^2.6.1",
+    "firebase": "^11.8.1",
     "framer-motion": "^12.10.2",
     "lucide-react": "^0.507.0",
     "react": "^18.3.1",
